## 2025-11-20
* Changed Directories to enable `flet build` command
* Updated start files to use `flet run`
* Renamed `Main.py` to `main.py` to reflect Flet's expectation


## 2025-11-19
* Added Changelog and Viewer
* Search Backend rewritten
* New Previous Chat Picker Sidebar
* Increased base Font Size